Full CallRecover implementation: services, calendar, AI, frontend

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,15 @@ REDIS_URL=redis://localhost:6379/0
 # App
 BASE_URL=https://yourdomain.com
 ENVIRONMENT=development
+ALLOWED_ORIGINS=https://app.yourdomain.com
 
 # Email (Resend)
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+EMAIL_FROM_ADDRESS=CallRecover <notifications@callrecover.com>
+
+# Business config
+SUBSCRIPTION_COST=497.0
+FOLLOW_UP_DELAY_MINUTES=1440,4320
 
 # Stripe (billing)
 STRIPE_SECRET_KEY=sk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
