Prepare for voice AI integration: update README, env config, and docs
- Rewrite README to reflect voice-AI-first product (CallRecover, not CallHook)
- Update .env.example with Vapi.ai credentials and new config options
- Add PR description template for the voice AI integration work
- Archive v1 SMS-first architecture doc
- Update follow-up delays to match spec (2hr, 24hr instead of 24hr, 72hr)

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,45 @@
-# Twilio
+# ======================
+# CallRecover Environment
+# ======================
+
+# Twilio (Voice + SMS)
 TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# OpenAI
+# Vapi.ai (Voice AI)
+VAPI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+VAPI_WEBHOOK_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# OpenAI (SMS conversation engine)
 OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Supabase
+# Supabase (Database + Auth + Realtime)
 SUPABASE_URL=https://xxxxxxxxxxxxx.supabase.co
 SUPABASE_ANON_KEY=eyJxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 SUPABASE_SERVICE_ROLE_KEY=eyJxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 DATABASE_URL=postgresql://postgres:xxx@db.xxxxxxxxxxxxx.supabase.co:5432/postgres
 
-# Redis
+# Redis (Task queue + caching)
 REDIS_URL=redis://localhost:6379/0
 
 # App
 BASE_URL=https://yourdomain.com
 ENVIRONMENT=development
 ALLOWED_ORIGINS=https://app.yourdomain.com
+ADMIN_API_KEY=change-me-in-production
 
 # Email (Resend)
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-EMAIL_FROM_ADDRESS=CallHook <notifications@callhook.com>
+EMAIL_FROM_ADDRESS=CallRecover <notifications@yourdomain.com>
+
+# Stripe (Billing)
+STRIPE_SECRET_KEY=sk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Business config
 SUBSCRIPTION_COST=497.0
-FOLLOW_UP_DELAY_MINUTES=1440,4320
-
-# Stripe (billing)
-STRIPE_SECRET_KEY=sk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+FOLLOW_UP_DELAY_MINUTES=120,1440
+OWNER_NUDGE_DELAY_MINUTES=30
 
 # Frontend (Next.js public vars)
 NEXT_PUBLIC_SUPABASE_URL=https://xxxxxxxxxxxxx.supabase.co
